test/tests/bad/transmute-size-mismatch2.carth
;; foo should fail here, not bar

(define: (foo a)
    (forall (a b) (Fun a b))
  (transmute a))

(define: (bar Unit)
    (Fun Unit Int8)
  (foo (: 123 Int)))
